fix: synchronise colours and icons

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="data science, technology, programming, portfolio, dinosaur" />
     <title>rawring-riha</title>
     <link rel="stylesheet" type="text/css" href="css/intro.css" />
-    <link rel="icon" href="img/yellow_dino.png" />
+    <link rel="icon" href="img/green_dino.png" />
 </head>
 <body>
     <div id="splash">
         
-        <img id="dino" src="img/yellow_dino.png" alt="Pixelated Dino" />
+        <img id="dino" src="img/green_dino.png" alt="Pixelated Dino" />
         
         <h1>rawring-riha</h1>
         <h2>Dino who loves data and tech</h2>
