--- a/public/css/intro.css
+++ b/public/css/intro.css
@@ -5,9 +5,9 @@
 }
 
 body {
-    background-color: #1a1a1a;
-    color: #ffffff;
-    font-family: 'Courier New', monospace;
+    background-color: #1a170f;
+    color: #e7e5e0;
+    font-family: 'Fira Code', monospace;
     height: 100vh;
     display: flex;
     align-items: center;
