feat: stylesheet changes

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -16,32 +16,33 @@
         <img id="dino" src="img/green_dino.png" alt="Pixelated Dino" />
         
         <h1>rawring-riha</h1>
-        <h2>Dino who loves data and tech</h2>
+        <h2>Observes ecosystems, Builds dashboards and systems</h2>
         
         <nav>
             <ul>
-                <li><a href="/projects">
-                    <span class="icon">💻</span>
-                    <span class="label">Projects</span>
-                </a></li>
-                <li><a href="/writing">
-                    <span class="icon">✍️</span>
-                    <span class="label">Writing</span>
-                </a></li>
-                <li><a href="/art">
-                    <span class="icon">🎨</span>
-                    <span class="label">Art</span>
-                </a></li>
-                <li><a href="/photography">
-                    <span class="icon">📸</span>
-                    <span class="label">Photography</span>
-                </a></li>
-                <li><a href="/about">
-                    <span class="icon">🌻</span>
-                    <span class="label">About</span>
-                </a></li>
+              <li><a href="/projects">
+                <span class="icon"><img src="/img/icons/projects.png" alt="Projects"></span>
+                <span class="label">Projects</span>
+              </a></li>
+              <li><a href="/writing">
+                <span class="icon"><img src="/img/icons/writing.png" alt="Writing"></span>
+                <span class="label">Writing</span>
+              </a></li>
+              <li><a href="/art">
+                <span class="icon"><img src="/img/icons/art.png" alt="Art"></span>
+                <span class="label">Art</span>
+              </a></li>
+              <li><a href="/photography">
+                <span class="icon"><img src="/img/icons/photo.png" alt="Photography"></span>
+                <span class="label">Photography</span>
+              </a></li>
+              <li><a href="/about">
+                <span class="icon"><img src="/img/icons/about.png" alt="About"></span>
+                <span class="label">About</span>
+              </a></li>
             </ul>
         </nav>
+
         
     </div>
 </body>
