--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,8 +28,8 @@
 {{- end }}
 
 <!-- Icons -->
-<link rel="shortcut icon" href="{{ "favicon.png" | absURL }}">
-<link rel="apple-touch-icon" href="{{ "apple-touch-icon.png" | absURL }}">
+<link rel="shortcut icon" href="{{ "/img/favicon.png" | absURL }}">
+<link rel="apple-touch-icon" href="{{ "/img/apple-touch-icon.png" | absURL }}">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary" />
