chore: cleaning up text

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="rawringriha - Dino who loves data and tech" />
+    <meta name="description" content="rawringriha - Observes ecosystems, Builds dashboards and systems" />
     <meta name="author" content="rawringriha" />
     <meta name="keywords" content="data science, technology, programming, portfolio, dinosaur" />
     <title>rawring-riha</title>
